deploy/kubernetes/minio/minio-deployment.yaml
# https://raw.githubusercontent.com/minio/minio/master/docs/orchestration/kubernetes-yaml/minio-gcs-gateway-deployment.yaml
# On production, we use Google Cloud Storage to store data.
apiVersion: apps/v1
kind: Deployment
metadata:
  # This name uniquely identifies the Deployment
  name: minio-deployment
spec:
  selector:
    matchLabels:
      app: minio-app
  replicas: 2
  template:
    metadata:
      labels:
        # Label is used as selector in the service.
        app: minio-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - minio-app
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: minio
        # Pulls the default Minio image from Docker Hub
        image: minio/minio:RELEASE.2020-10-12T21-53-21Z
        args:
        - --certs-dir
        - /etc/minio/etcd-ssl
        - gateway
        - gcs
        - --json
        resources:
          requests:
            cpu: 0.25
            memory: 250Mi
          limits:
            cpu: 0.25
            memory: 250Mi
        ports:
        - containerPort: 9000
        # Mount the volume into the pod
        volumeMounts:
        - name: minio-gcs-credentials
          mountPath: "/etc/credentials"
          readOnly: true
        - name: etcd-certs
          mountPath: /etc/minio/etcd-ssl
          readOnly: true
        livenessProbe:
          httpGet:
            path: /minio/health/live
            port: 9000
          initialDelaySeconds: 20
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /minio/health/ready
            port: 9000
          initialDelaySeconds: 20
          periodSeconds: 20
      volumes:
      - name: minio-gcs-credentials
        secret:
          secretName: minio-gcs-credentials
      - name: etcd-certs
        secret:
          secretName: minio-etcd-client-certs
          items:
            # minio expects CAs in a "CAs/" subdir -- there's no way to specify
            # the etcd CA explicitly. So we need to project all keys.
            - key: ca.crt
              path: CAs/minio-etcd-ca.crt
            - key: client.crt
              path: client.crt
            - key: client.key
              path: client.key
