deploy/kubernetes/minio/minio-etcd-statefulset.yaml
# We need a non-root minio user so we can provide STS in gateway mode.
# https://docs.min.io/docs/minio-multi-user-quickstart-guide.html
#
# We'll run a cluster of three minio servers.
apiVersion: v1
kind: Service
metadata:
  name: minio-etcd
  labels:
    app: minio-etcd
spec:
  ports:
    - port: 2379
      protocol: TCP
  selector:
    app: minio-etcd
---
apiVersion: v1
kind: Service
metadata:
  name: minio-etcd-peer
  labels:
    app: minio-etcd
spec:
  ports:
    - port: 2380
      protocol: TCP
  selector:
    app: minio-etcd
  clusterIP: None  # Headless service. It auto-creates pod DNS A records that we'll use.
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-etcd
spec:
  selector:
    matchLabels:
      app: minio-etcd
  serviceName: minio-etcd-peer
  replicas: 3
  template:
    metadata:
      labels:
        app: minio-etcd
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - minio-etcd
            topologyKey: "kubernetes.io/hostname"
      subdomain: minio-etcd  # so each pod gets a DNS name, which we'll use for static clustering
      containers:
        - name: minio-etcd
          image: gcr.io/etcd-development/etcd:v3.4.13
          ports:
            - containerPort: 2379
              name: server
            - containerPort: 2380
              name: peer
          volumeMounts:
            - name: data
              mountPath: /mnt/etcd-data
            - name: certs
              mountPath: /etc/etcd/ssl
            - name: clientcerts  # used for status checks
              mountPath: /etc/etcd/ctl-ssl
          livenessProbe:
            exec:
              command:
                - etcdctl
                - endpoint
                - health
                - --key=/etc/etcd/ctl-ssl/client.key
                - --cert=/etc/etcd/ctl-ssl/client.crt
                - --cacert=/etc/etcd/ssl/ca.crt
                - --insecure-skip-tls-verify  # ICKY but really, do we want to make special certs just for this?
      volumes:
        - name: certs
          secret:
            secretName: minio-etcd-server-certs
        - name: clientcerts
          secret:
            secretName: minio-etcd-client-certs
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: ssd
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi  # 300 IOPS
