deploy/kubernetes/minio/minio-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: minio-service
spec:
  selector:
    app: minio-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
