deploy/kubernetes/minio/minio-staging-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: staging
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    # Stream requests straight into minio -- no buffering or limiting
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ignore-invalid-headers: "false"
spec:
  tls:
    - hosts:
      - staging-user-files.workbenchdata.com
      secretName: staging-user-files.workbenchdata.com-secret
  rules:
    - host: staging-user-files.workbenchdata.com
      http:
        paths:
          - path: /
            backend:
              serviceName: minio-service
              servicePort: 9000
